# synapse-studio

./: .gitignore  LICENSE  README.md  pyproject.toml
synapse_studio/: __main__.py  app.py  cli.py  layout.py  state.py
synapse_studio/pages/: chat.py  collections.py  ingest.py  query.py  settings.py
