[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapse-studio"
version = "0.1.0"
description = "Visual GUI front-end for synapse-core"
requires-python = ">=3.11"
dependencies = [
    "nicegui[native]>=1.4",
    "synapse-core>=1.1.1",
]

[project.scripts]
synapse-studio = "synapse_studio.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["synapse_studio"]
